Bug 72590 - Embedded EMF files not displayed correctly
Summary: Embedded EMF files not displayed correctly
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
4.1.0.4 release
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:4.3.0
Keywords: regression
Depends on:
Blocks:
 
Reported: 2013-12-11 09:33 UTC by GavinErry
Modified: 2014-05-19 10:35 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Zip with the EMF, ODT, and images showing the problem (310.01 KB, application/zip)
2013-12-11 09:33 UTC, GavinErry
Details

Note You need to log in before you can comment on or make changes to this bug.
Description GavinErry 2013-12-11 09:33:23 UTC
Created attachment 90600 [details]
Zip with the EMF, ODT, and images showing the problem

Versions 4.1 and 4.2 beta 2 do not display embedded EMF files correctly.  This used to work on version 4.0.  Running on Windows.

I have attached an EMF file, and an ODT file that was created using version 4.0.  The file 4.0.jpg shows the file displayed in v4.0.  The file 4.2.jpg shows the exact same file opened in v4.2 beta 2.

The same behaviour also occurred in v4.1.

Creating the file in v4.2 beta 2 also exhibits this display bug.

Gavin
Comment 1 Alexandr 2014-02-08 18:37:04 UTC
Thank you for reporting the bug.

I reproduce it in LibreOffice 4.1.4.2 and 4.2.0.4 on Debian x86_64. The document is opened without problems in LibreOffice 3.5.4. According to https://wiki.documentfoundation.org/QA/Bugzilla/Fields/Version “We currently use the Version field to store the earliest LibreOffice version on which we can reproduce a bug”. So, I set the field to 4.1.4. Please, change it if you reproduce the bug in earlier version. It is especially important in the case of regression.

It is not only writer bug. LibreOffice draw opens the .emf in the same way.
Comment 2 Michael Stahl 2014-02-10 11:24:02 UTC
broken since 4.1.0 release
Comment 3 Commit Notification 2014-05-18 22:00:36 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=fc83bf8bbf813fff1cb7c0b7925976bc43a49f94

fdo#72590 scale or map only when EMR_EXTSELECTCLIPRGN action



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.