fdo#72590 scale or map only when EMR_EXTSELECTCLIPRGN action

Conflicts:
	vcl/source/filter/wmf/enhwmf.cxx
	vcl/source/filter/wmf/winmtf.cxx

Change-Id: Ie42c855e696922b38760876d4090d572deaa689a